# webserver

./: .gitignore  Cargo.toml  README.md  app.py  config.example.py  config.example.toml  config.toml  main.py  requirements.txt
server_config/: Cargo.toml
server_config/src/: cfg.rs  lib.rs  store.rs
server_core/: Cargo.toml
server_core/src/: lib.rs
server_oauth/: Cargo.toml
server_oauth/src/: client.rs  get_auth.rs  lib.rs  response.rs  types.rs
server_templates/: Cargo.toml
server_templates/templates/: index.askama
src/: main.rs
templates/: dashboard.html  oauth_rejected.html  premium.html  premium_checkout.html  premium_success.html  setup.html
