[package]
name = "scripty_webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "server_core",
  "server_oauth",
  "server_config",
  "server_templates",
]

[dependencies]
server_oauth = { path = "server_oauth" }
server_core = { path = "server_core" }
tracing-subscriber = "0.3"
tokio = { version = "1.17", features = ["full"] }
