[package]
name = "server_oauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "4.1"
tracing = "0.1"
once_cell = "1.10"
async-session = "3.0"
server_config = { path = "../server_config" }
tokio = { version = "1.17", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
# Use Rustls because it makes it easier to cross-compile on CI
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }